# omniatc

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  justfile  typos.toml  web.html
.github/: copilot-instructions.md
.github/workflows/: build.yaml  ci.yaml  client-tests.yaml
omniatc-client/: Cargo.toml
omniatc-client/src/: config.rs  input.rs  layout.rs  lib.rs  main.rs  render.rs  storage.rs  store.rs  util.rs
omniatc-client/src/config/: bool_impl.rs  color_impl.rs  enum_impls.rs  field_impls.rs  float_impls.rs
omniatc-client/src/input/: key_field.rs
omniatc-client/src/render/: config_editor.rs  dock.rs  level_info.rs  messages.rs  object_info.rs  threedim.rs  tutorial_popup.rs  twodim.rs
omniatc-client/src/render/level_info/: camera.rs  diagnostics.rs  objects.rs  quests.rs  score.rs  time.rs
omniatc-client/src/render/object_info/: alt.rs  dest.rs  dir.rs  env.rs  route.rs  signal.rs  speed.rs
omniatc-client/src/render/twodim/: aerodrome.rs  camera.rs  object.rs  pick.rs  runway.rs  wake.rs  waypoint.rs
omniatc-client/src/render/twodim/aerodrome/: endpoint.rs  segment.rs  tests.rs  vis.rs
omniatc-client/src/render/twodim/aerodrome/endpoint/: tests.rs
omniatc-client/src/render/twodim/camera/: inputs.rs  select.rs
omniatc-client/src/render/twodim/object/: base_color.rs  label.rs  preview.rs  separation_ring.rs  track.rs  vector.rs
omniatc-client/src/render/twodim/runway/: glide_point.rs  localizer.rs  strip.rs
omniatc-client/src/storage/: fs.rs  scenario_loader.rs
omniatc-client/src/store/: fs.rs  scenario_loader.rs  web.rs
omniatc-client/src/util/: anchor.rs  billboard.rs  shapes.rs
omniatc-core/: Cargo.toml
omniatc-core/src/: level.rs  lib.rs  load.rs  math.rs  pid.rs  store.rs  try_log.rs  units.rs  util.rs
omniatc-core/src/level/: aerodrome.rs  comm.rs  conflict.rs  dest.rs  ground.rs  index.rs  instr.rs  message.rs  nav.rs  navaid.rs  object.rs  plane.rs  quest.rs  route.rs  runway.rs  score.rs  spawn.rs  taxi.rs  wake.rs  waypoint.rs  weather.rs  wind.rs
omniatc-core/src/level/aerodrome/: loader.rs
omniatc-core/src/level/conflict/: detect.rs  tests.rs
omniatc-core/src/level/index/: tests.rs
omniatc-core/src/level/nav/: tests.rs
omniatc-core/src/level/object/: dest.rs  loader.rs  tests.rs  types.rs
omniatc-core/src/level/quest/: condition.rs  highlight.rs  loader.rs
omniatc-core/src/level/quest/condition/: mod.rs  tests.rs
omniatc-core/src/level/route/: altitude.rs  heading.rs  landing.rs  loader.rs  navigation.rs  passive.rs  predict.rs  schedule.rs  speed.rs  takeoff.rs  taxi.rs  tests.rs  trigger.rs
omniatc-core/src/level/route/taxi/: tests.rs
omniatc-core/src/level/score/: loader.rs
omniatc-core/src/level/spawn/: loader.rs
omniatc-core/src/level/waypoint/: loader.rs
omniatc-core/src/level/weather/: loader.rs
omniatc-core/src/level/wind/: loader.rs
omniatc-core/src/math/: consts.rs  sweep.rs  tests.rs
omniatc-core/src/math/sweep/: tests.rs
omniatc-core/src/store/: load.rs
omniatc-core/src/store/load/: tests.rs
omniatc-core/src/units/: display.rs  heading.rs  position.rs  squared.rs
omniatc-core/src/units/heading/: tests.rs
omniatc-core/src/util/: async_task.rs  eq_any.rs  iter.rs  query.rs  rate_limit.rs  schedule.rs
omniatc-macros/: Cargo.toml
omniatc-macros/src/: derive_config.rs  derive_field_enum.rs  lib.rs
omniatc-maps/: Cargo.toml
omniatc-maps/src/: blank.rs  common_types.rs  demo.rs  example.rs  lib.rs  main.rs  tutorial.rs
omniatc-math/: Cargo.toml
omniatc-math/src/: alg2d.rs  control.rs  lib.rs  physics.rs  sweep.rs  tests.rs  units.rs
omniatc-math/src/alg2d/: tests.rs
omniatc-math/src/control/: tests.rs
omniatc-math/src/physics/: tests.rs
omniatc-math/src/sweep/: tests.rs
omniatc-math/src/units/: display.rs  egui_impl.rs  heading.rs  position.rs  squared.rs  temp.rs
omniatc-math/src/units/heading/: tests.rs
omniatc-store/: Cargo.toml
omniatc-store/src/: geometry.rs  level.rs  lib.rs  meta.rs  object.rs  object_type.rs  player.rs  quest.rs  refs.rs  route.rs  score.rs  ui.rs  weighted.rs
omniatc-store/src/level/: aerodrome.rs  env.rs  spawn.rs
src/: level.rs  main.rs  math.rs  pid.rs  store.rs  ui.rs  units.rs  util.rs
src/level/: aerodrome.rs  nav.rs  object.rs  plane.rs  route.rs  runway.rs  waypoint.rs  wind.rs
src/math/: tests.rs
src/ui/: billboard.rs  camera.rs  clock.rs  ground.rs  message.rs  object.rs  render.rs  runway.rs  shapes.rs  store.rs  track.rs  waypoint.rs
src/ui/camera/: input.rs  ruler.rs
src/ui/clock/: input.rs
src/ui/object/: control.rs  input.rs  render.rs  select.rs
src/units/: display.rs  heading.rs  position.rs  squared.rs
tests/: Dockerfile
tests/client/: Cargo.toml
tests/client/src/: lib.rs
tests/diff-image/: Cargo.toml
tests/diff-image/src/: lib.rs
web/: index.html
