[workspace]
members = [
	"omniatc-client",
	"omniatc-core",
	"omniatc-maps",
	"omniatc-math",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.16.0", default-features = false }
bevy_math = "0.16.0"
bevy_mod_config = {version = "0.2.2", features = ["bevy_color"]}
omniatc-core = { version = "*", path = "omniatc-core" }
omniatc-math = { version = "*", path = "omniatc-math" }
serde = "1.0.217"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["SOFe <sofe2038@gmail.com>"]
repository = "https://github.com/SOF3/omniatc"
license = "GPL-3.0"
rust-version = "1.89"
