[workspace]
members = [
	"omniatc-math",
	"omniatc-store",
	"omniatc-maps",
	"omniatc-core",
	"omniatc-client",
]
resolver = "2"

[workspace.dependencies]
bevy_math = "0.18.0"
bevy_egui = { version = "0.38.1", default-features = false }
egui = "0.33.3"
egui_extras = "0.33.3"
bevy_mod_config = {version = "0.4.0", features = ["bevy_color"]}
omniatc-core = { version = "*", path = "omniatc-core" }
omniatc-math = { version = "*", path = "omniatc-math" }
omniatc-store = { version = "*", path = "omniatc-store" }
serde = "1.0.217"

[workspace.dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
	"bevy_log",
	"reflect_auto_register",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["SOFe <sofe2038@gmail.com>"]
repository = "https://github.com/SOF3/omniatc"
license = "GPL-3.0"
rust-version = "1.89"
