[workspace]
members = [
	"omniatc-math",
	"omniatc-store",
	"omniatc-maps",
	"omniatc-core",
	"omniatc-client",
	"tests/client",
	"tests/diff-image",
]
resolver = "2"

[workspace.dependencies]
bevy_math = "0.18.1"
bevy_egui = { version = "0.39.1", default-features = false }
egui = "0.33.3"
egui_extras = "0.34.1"
bevy_mod_config = {version = "0.5.0", features = ["bevy_color"]}
omniatc-core = { version = "*", path = "omniatc-core" }
omniatc-math = { version = "*", path = "omniatc-math" }
omniatc-store = { version = "*", path = "omniatc-store" }
omniatc-maps = { version = "*", path = "omniatc-maps" }
omniatc-client = { version = "*", path = "omniatc-client" }
omniatc-client-test = { version = "*", path = "tests/client" }
omniatc-diff-image = { version = "*", path = "tests/diff-image" }
serde = "1.0.228"

[workspace.dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
	"bevy_log",
	"reflect_auto_register",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["SOFe <sofe2038@gmail.com>"]
repository = "https://github.com/SOF3/omniatc"
license = "GPL-3.0"
rust-version = "1.94"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# too many false positives from system params.
needless_pass_by_value = "allow"
type_complexity = "allow"
too_many_arguments = "allow"

# 5:21 PM conrad.lock().expect("luscious")[tty0] : Worst clippy lint
missing_panics_doc = "allow"
# I suppose the same for error docs...
# If it is ambiguous the error type should be explicit instead of the doc prose...
missing_errors_doc = "allow"

# this is usually intentional
collapsible_else_if = "allow"

# unnecessary generalization
implicit_hasher = "allow"

allow_attributes = "deny"
allow_attributes_without_reason = "warn"

# Allowed during dev, checked during precommit
dbg_macro = "allow"

[workspace.lints.rust]
# Allowed during dev, checked during precommit
unused_imports = "allow"
dead_code = "allow"
unused_variables = "allow"

# Significantly improves screenshot diff performance during snapshot testing.
[profile.dev.package.omniatc-diff-image]
opt-level = 3
