[package]
name = "omniatc-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Yet another ATC simulator"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "omniatc-core/dev"]
inspect = ["dep:bevy-inspector-egui"]

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
omniatc-core.workspace = true
omniatc-math.workspace = true
omniatc-macros = {path="../omniatc-macros"}
bevy-inspector-egui = { version = "0.31.0", optional = true }
anyhow = "1.0.97"
async-lock = "3.4.0"
bevy_mod_config = { workspace = true, features = ["serde_json", "egui"] }
ciborium = "0.2.2"
dirs = "6.0.0"
egui_extras = "0.31.1"
either = "1.15.0"
enum-map = "2.7.3"
itertools = "0.14.0"
ordered-float = "5.0.0"
parking_lot = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["macros", "base64"] }
strum = { version = "0.26.3", features = ["derive"] }
smallvec = "1.15.0"

[dependencies.bevy]
workspace = true
default-features = false
features = [
	"bevy_color",
	"bevy_render",
	"bevy_state",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"bevy_window",
	"default_font",
	"multi_threaded",
	"png",
	"tonemapping_luts",
	"webgl2",
	"x11",
]

[dependencies.bevy_egui]
version = "0.34.1"
default-features = false
features = ["default_fonts", "manage_clipboard", "open_url", "render"]

[target.'cfg(target_family = "wasm")'.dependencies]
idb = "0.6.4"
js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.34.0", features = ["bundled"] }
