[package]
name = "omniatc-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Yet another ATC simulator"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "omniatc-core/dev"]
debug = ["dep:bevy-inspector-egui"]

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
omniatc-core.workspace = true
omniatc-math = { workspace = true, features = ["egui"] }
omniatc-store.workspace = true

anyhow = "1.0.100"
async-lock = "3.4.2"
bevy_mod_config = { workspace = true, features = ["serde_json", "egui"] }
ciborium = "0.2.2"
dirs = "6.0.0"
egui_extras.workspace = true
either = "1.15.0"
enum-map = "2.7.3"
itertools = "0.14.0"
ordered-float = "5.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["macros", "base64"] }
strum = { version = "0.27.2", features = ["derive"] }
smallvec = "1.15.0"
clap = { version = "4.5.41", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["into"] }

[dependencies.bevy]
workspace = true
default-features = false
features = [
	"bevy_color",
	"bevy_render",
	"bevy_sprite_render",
	"bevy_state",
	"bevy_text",
	"bevy_ui",
	"bevy_winit",
	"bevy_window",
	"default_font",
	"multi_threaded",
	"png",
	"tonemapping_luts",
	"webgl2",
	"x11",
	"serialize",
]

[dependencies.bevy_egui]
workspace = true
features = ["default_fonts", "manage_clipboard", "open_url", "render", "serde"]

[dependencies.bevy-inspector-egui]
version = "0.35.0"
optional = true
default-features = false
features = [
	"bevy_core_pipeline",
	"egui_clipboard",
	"bevy_render",
]

[target.'cfg(target_family = "wasm")'.dependencies]
idb = "0.6.4"
js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
