[package]
name = "omniatc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core game logic"

[features]
default = ["dev"]
dev = []
precommit-checks = []

[dependencies]
ciborium = "0.2.2"
enum-map = "2.7.3"
itertools = "0.13.0"
serde = { workspace = true, features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"

[dependencies.bevy]
workspace = true
features = [
	"bevy_color",
	"bevy_state",
	"bevy_text",
]
