[package]
name = "omniatc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core game logic"

[features]
default = ["dev"]
dev = []

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
ciborium = "0.2.2"
enum-map = "2.7.3"
itertools = "0.14.0"
ordered-float = "5.0.0"
portrait = "0.3.1"
serde = { workspace = true, features = ["derive"] }
smallvec = "1.13.2"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"

[dependencies.bevy]
workspace = true
features = [
	"bevy_color",
	"bevy_log",
	"bevy_state",
	"bevy_text",
]

[dev-dependencies]
paste = "1.0.15"
