[package]
name = "omniatc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core game logic"

[lib]
name = "omniatc"

[features]
default = ["dev"]
dev = []

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
omniatc-math.workspace = true
omniatc-store.workspace = true

bevy_mod_config = { workspace = true, features = ["serde_json"] }
ciborium = "0.2.2"
derive_more = { version = "2.0.1", features = ["from", "add", "add_assign"] }
either = "1.15.0"
enum-map = "2.7.3"
itertools = "0.14.0"
ordered-float = "5.0.0"
portrait = "0.3.1"
serde = { workspace = true, features = ["derive"] }
smallvec = "1.13.2"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
pathfinding = "4.14.0"
rand = { version = "0.9.2", features = ["small_rng", "thread_rng"], default-features = false }
bitflags = "2.9.4"
wordvec = "0.0.1"

[dependencies.bevy]
workspace = true
features = [
	"bevy_color",
	"bevy_log",
	"bevy_state",
	"bevy_text",
]

[dev-dependencies]
paste = "1.0.15"
