[package]
name = "omniatc-macros"
version = "0.0.0"
edition = "2024"
authors = ["SOFe <sofe2038@gmail.com>"]
repository = "https://github.com/SOF3/omniatc"
description = "Generate map files"
license = "GPL-3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"

