[package]
name = "omniatc-maps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Generate map files"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
precommit-checks = []

[dependencies]
omniatc-core.workspace = true
omniatc-math.workspace = true

anyhow = "1.0.95"
bevy = { workspace = true }
ciborium = "0.2.2"
serde.workspace = true
strum = { version = "0.26.3", features = ["derive"] }
