[package]
name = "omniatc-maps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Generate map files"

[features]
default = []

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
omniatc-math.workspace = true
omniatc-store = {workspace = true, features = ["schema"]}

anyhow = "1.0.100"
bevy_math.workspace = true
ciborium = "0.2.2"
serde.workspace = true
strum = { version = "0.26.3", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.0.4"
flate2 = "1.1.5"
