[package]
name = "omniatc-maps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Generate map files"

[lints]
workspace = true

[features]
default = []

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
omniatc-math.workspace = true
omniatc-store = {workspace = true, features = ["schema"]}

anyhow = "1.0.101"
bevy_math.workspace = true
ciborium = "0.2.2"
serde.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
clap = { version = "4.5.58", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"
flate2 = "1.1.9"
