[package]
name = "omniatc-math"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Common unit types and math utils"

[lib]
name = "math"

[features]
egui = ["dep:egui", "bevy_mod_config/egui"]
schema = ["dep:schemars", "dep:serde_json"]

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
bevy_math.workspace = true
bevy_mod_config = { workspace = true, features = ["serde_json"] }
egui = { workspace = true, optional = true }
num-traits = "0.2.19"
ordered-float = "5.0.0"
paste = "1.0.15"
schemars = { version = "1.0.4", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.146", optional = true }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
