[package]
name = "omniatc-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Schema of store files"

[lib]
name = "store"

[features]
default = []
schema = ["dep:schemars", "omniatc-math/schema"]

# For development only
precommit-checks = []
rust-analyzer = []

[dependencies]
omniatc-math.workspace = true

anyhow = "1.0.100"
bevy_math = {workspace = true, features = ["serialize"]}
ciborium = "0.2.2"
serde = { workspace = true, features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["add", "add_assign"] }
rand = { version = "0.9.2", default-features = false }
schemars = { version = "1.0.4", optional = true }
